--- a/src/assets/css/HomePage.css
+++ b/src/assets/css/HomePage.css
@@ -71,7 +71,7 @@ body {
     width: 640px;
     height: 144px;
     transform: translate(-50%, 0px);
-    color: white;
+    color:black;
     /* color: #1a0303; */
     font-weight: bold;
   }
