--- a/src/assets/css/ReviewCard.css
+++ b/src/assets/css/ReviewCard.css
@@ -158,7 +158,7 @@ body {
     width: 65%;
     height: 80%;
     /* border: 1px solid red; */
-    position: absolute;
+    /* position: absolute; */
     background-color: white;
   }
   
