--- a/src/assets/css/ReviewCard.css
+++ b/src/assets/css/ReviewCard.css
@@ -173,19 +173,23 @@ body {
     /* border: 1px solid red; */
     width: 100%;
     height: 150px;
+    margin-bottom: 20px;
   }
   .bac-right-1 {
     font-size: 24px;
     line-height: 28px;
+    margin-bottom: 20px;
   }
   .bac-right-2 {
     font-size: 24px;
     line-height: 28px;
+    margin-bottom: 20px;
   }
   
   .bac-right-3 {
     font-size: 24px;
     line-height: 28px;
+    margin-bottom: 20px;
   }
   .car-park {
     /* border: 1px solid red; */
