--- a/src/assets/css/ReviewRes.css
+++ b/src/assets/css/ReviewRes.css
@@ -99,6 +99,9 @@ body {
   .wh-ba-right-ptag {
     margin-left: 100px;
   }
+  .wh-ba-right-ptag2 {
+    margin-left: 300px;
+  }
   
   .card-container {
     width: 1386px;
