--- a/src/assets/css/ReviewCard.css
+++ b/src/assets/css/ReviewCard.css
@@ -51,14 +51,15 @@ a:hover {
   /* background-image: url("picture/Hottobun.jpg"); */
   background-repeat: no-repeat;
   background-size: cover;
-  opacity: 0.8;
+  opacity: 0.6;
   position: relative;
 }
 .food-background h3 {
   position: absolute;
   font-size: 50px;
   line-height: 59px;
-  color: #ffffff;
+  font-weight: bold;
+  color: black;
   left: 10%;
   top: 10%;
 }
@@ -66,11 +67,12 @@ a:hover {
   position: absolute;
   font-size: 36px;
   line-height: 42px;
-  color: #ffffff;
+  color: black;
   max-width: 640px;
   height: 144px;
   left: 10%;
   top: 30%;
+  font-weight: bold;
 }
 .review-point-bac {
   position: absolute;
@@ -109,6 +111,11 @@ a:hover {
 }
 .star {
   font-size: 60px;
+  color: rgba(250, 188, 116, 1);
+}
+.star-review {
+  font-size: 60px;
+  width: 25%;
   color: rgba(250, 188, 116, 1);
 }
 .num-review {
@@ -245,10 +252,15 @@ a:hover {
 
 .heading-review {
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   margin-top: 30px;
   font-size: 36px;
   line-height: 42px;
+}
+.heading-review-star{
+  width: 40%;
+  margin-left: 10%;
+  margin-right: 25%;
 }
 /* .picture-review {
     text-align: center;
@@ -278,12 +290,24 @@ a:hover {
   margin-top: 20px;
   margin-left: 60px;
 }
-.edit {
-  border: 1px solid black;
-  position: absolute;
-  margin-left: 85%;
+.delete {
+  border: 0px solid black;
+  /* position: absolute; */
+  margin-left: 90%;
   margin-top: 10px;
   background-color: red;
+  border-radius: 5px;
+  padding: 5px;
+  display: flex;
+  margin-left: auto;
+}
+.edit {
+  border: 0px solid black;
+  background-color: yellow;
+  margin-left: 80%;
+  margin-top: 10px;
+  border-radius: 5px;
+  padding: 5px;
 }
 .carousel-control.left,
 .carousel-control.right {
@@ -419,4 +443,30 @@ a:hover {
   .credit > img {
     width: 35px !important;
   }
+  .bac-mid {
+    width: 1740px;
+    /* border: 1px solid green; */
+    /* position: relative; */
+    /* top: 80px; */
+    display: flex;
+    flex-direction: column;
+    justify-content: unset;
+  }
+  .bac-left {
+    width: 100%;
+    /* height: 100%; */
+    /* border: 1px solid red; */
+    /* background-color: white; */
+    position: relative;
+    order:2
+}
+.bac-right {
+  width: 100%;
+  margin-bottom: 20px;
+  /* height: 100%; */
+  /* border: 1px solid red; */
+  /* background-color: white; */
+  position: relative;
+  order:1
+}
 }
