--- a/src/assets/css/ReviewCard.css
+++ b/src/assets/css/ReviewCard.css
@@ -268,6 +268,7 @@ a:hover {
   } */
 .center {
   display: block;
+  height: 500px;
   /* margin-left: auto;
     margin-right: auto; */
   margin: 0 auto;
