--- a/src/assets/css/CategoryRes.css
+++ b/src/assets/css/CategoryRes.css
@@ -50,6 +50,7 @@ body {
     /* background-color: red; */
     height: 100%;
     width: 100%;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     position: relative;
@@ -121,7 +122,7 @@ body {
     width: 1386px;
     height: 100%;
     /* border: 1px solid green; */
-    position: absolute;
+    /* position: absolute; */
     margin-top: 230px;
     display: flex;
     justify-content: space-around;
